tests/typecheck/good/pm2.scilla
let x = Int32 42 in
let y = Int32 41 in
let f = fun (o : Option (Option Int32)) =>
  match o with
  | None => x
  | Some None => y
  | Some (Some z) => z
  end
in f