tests/typecheck/bad/fun2.scilla
fun (x : Int32) => y
